Resolved all issues